--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memiens",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/CupCakeArmy/memiens#readme",
   "dependencies": {
-    "yaml": "^1"
+    "yaml": "1"
   },
   "devDependencies": {
-    "@types/node": "^11",
-    "@types/yaml": "^1",
-    "mocha": "^6",
-    "typescript": "^3"
+    "@types/node": "latest",
+    "@types/yaml": "1",
+    "mocha": "6",
+    "typescript": "3.6"
   }
 }
