--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "memiens",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Yaml config utility",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "npm run build && mocha",
+    "test": "pnpm run build && mocha",
     "prepublishOnly": "rm -rf lib && npm run test"
   },
   "keywords": [
@@ -21,11 +21,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "yaml": "^1"
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/node": "^14",
-    "mocha": "^8",
-    "typescript": "^4"
+    "@types/node": "16",
+    "mocha": "^9.2.2",
+    "typescript": "^4.6.2"
   }
 }
